
         • ‘plot_RLum’ was not passing the argument ‘sub’, as it was
           fetched by the partial argument matching; fixed.

         • ‘set_RLum’ produced ‘NA’ as orignator, if the function
           calling the function ‘set_RLum()’ was called from outside of
           the package using the double colons (e.g.,
           ‘Luminescence::function()’); fixed.

  Bugfixes and changes:

         • ‘analyse_SAR.CWOSL()’

             • Fix wrongly set threshold value for recuperation rate
               (#26).

         • ‘calc_AliquotSize()’

             • Console output can now be suppressed via 'verbose =
               TRUE' (#24).

         • ‘calc_CosmicDoseRate()’

             • Console output can now be suppressed via 'verbose =
               TRUE' (#24).

         • ‘calc_FastRatio()’

             • New arguments 'Ch_L2' and 'Ch_L3' to allow the user to
               specify custom values for channels L2 and L3. Feature
               requested by A. Versendaal (#29).

         • ‘calc_FadingCorr()’

             • Fixed a bug where the function would crash when
               providing an ‘RLum.Results’ object for ‘g_value’,

             • new argument ‘interval’ to control the age interval for
               solving the equation via ‘uniroot’.

         • ‘calc_FiniteMixture()’

             • Fixed a bug where certain arguments where not passed to
               `plot_RLum.Results` so that the plot was not as
               customisable as intended.  Thanks to Daniele Questiaux
               for reporting the bug.

         • ‘plot_DetPlot()’

             • Correct negative y-axis, the minimum is now the real
               minimum.

         • ‘plot_GrowthCurve()’

             • Reduce number of confusing warning,

             • add new argument ‘mode’ to select the calculation mode
               of the function.  This allows in particular to only fit
               data without calculating a De or calculating a De